set auto width to stop image stretching

--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -88,6 +88,7 @@
 
 #chirp-media{
   max-height: 300px;
+  width: auto;
   max-width: 70%;
   margin-bottom: 3%;
   margin-left: 16%;
